<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_gravity="center_horizontal"
        android:minHeight="?actionBarSize">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_back"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/tools_name"
            style="@style/TextAppearance.AppCompat.Value"
            android:textColor="@color/white_soft"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/detail_user"
            android:layout_marginStart="16dp"/>

        <ImageView
            android:id="@+id/btn_share"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_share"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end"/>

    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_detail"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        tools:src="@color/black_soft" />

    <TextView
        android:id="@+id/name_detail"
        style="@style/TextAppearance.AppCompat.Value"
        android:textStyle="bold"
        android:layout_below="@id/img_detail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        tools:text="@string/nama_user" />

    <TextView
        android:id="@+id/username"
        style="@style/TextAppearance.AppCompat.Value"
        android:layout_below="@id/name_detail"
        android:layout_marginBottom="15dp"
        android:layout_alignParentStart="true"
        tools:text="@string/username"/>

    <LinearLayout
        android:id="@+id/lyt_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_detail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_location"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@id/name_detail"
            android:src="@drawable/ic_pin" />

        <TextView
            android:id="@+id/tv_location"
            style="@style/TextAppearance.AppCompat.Value"
            android:layout_below="@id/name_detail"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@id/img_location"
            tools:text="@string/tv_location" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyt_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lyt_location"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_company"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@id/lyt_location"
            android:src="@drawable/ic_building" />

        <TextView
            android:id="@+id/tv_company"
           style="@style/TextAppearance.AppCompat.Value"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/img_company"
            tools:text="@string/tv_company" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lyt_company"
        android:layout_marginTop="25dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:layout_gravity="center"
        android:elevation="8dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        app:cardCornerRadius="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_cardview"
            android:padding="24dp">

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.AppCompat.Value"
                android:text="@string/followers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_followers"
                style="@style/TextAppearance.AppCompat.Value"
                tools:text="99"
                app:layout_constraintEnd_toEndOf="@id/textView"
                app:layout_constraintStart_toStartOf="@id/textView"
                app:layout_constraintTop_toBottomOf="@id/textView"/>

            <TextView
                android:id="@+id/textView2"
                style="@style/TextAppearance.AppCompat.Value"
                android:text="@string/following"
                android:layout_marginLeft="40dp"
                app:layout_constraintStart_toEndOf="@id/textView"
                app:layout_constraintEnd_toStartOf="@id/textView3"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_following"
                style="@style/TextAppearance.AppCompat.Value"
                app:layout_constraintStart_toStartOf="@id/textView2"
                app:layout_constraintEnd_toEndOf="@id/textView2"
                app:layout_constraintTop_toBottomOf="@id/textView2"
                tools:text="99"/>

            <TextView
                android:id="@+id/textView3"
                style="@style/TextAppearance.AppCompat.Value"
                android:text="@string/repository"
                android:layout_marginLeft="40dp"
                app:layout_constraintStart_toEndOf="@id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_repository"
                style="@style/TextAppearance.AppCompat.Value"
                app:layout_constraintStart_toStartOf="@id/textView3"
                app:layout_constraintEnd_toEndOf="@id/textView3"
                app:layout_constraintTop_toBottomOf="@id/textView3"
                tools:text="99"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>